@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed that the tasks GUI would close if you used E to confirm the new task GUI
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.1
 Date: 2021-11-27
